package src.main.java.Characters.Enemies;

public class Xenomorf {
    public void xenomorfAduction() { }
}
