package Domain.Entity.Characters.Enemies;

public class Titan extends Enemies {
    public void devastationTitan() {
    }
}
