package Domain.Entity.Elements.Items;

import Domain.Entity.Elements.Elements;

// Clase base Items
public class Items extends Elements {
    protected int statsElement;

    public void enhancementEffect(){};

}
