package Domain.Entity.Elements.Powers;


import Domain.Entity.Elements.Elements;

// Clase base Powers
public class Powers extends Elements {
        protected int range;
}

