package src.main.java.Elements.Items;

// Clase Adrenalin que hereda de Items 
class Adrenalin extends Items { 
  private int increaseInSpeed;
  
public Adrenalin(int statsElement, int increaseInSpeed) {
    super(statsElement);
    this.increaseInSpeed = increaseInSpeed;
}

public void enhancementEffect(DraLara) {
    System.out.println("Usando adrenalina...");
        goal.increaseSpeed(increaseInSpeed);
   }

public void enhancementEffect(ElenaDrakeCapitan) {
    System.out.println("Usando adrenalina...");
        goal.increaseSpeed(increaseInSpeed);
   }

 public void enhancementEffect(EngineerMarcus) {
    System.out.println("Usando adrenalina...");
        goal.increaseSpeed(increaseInSpeed);
   }

 public void enhancementEffect(JaxKane) {
    System.out.println("Usando adrenalina...");
        goal.increaseSpeed(increaseInSpeed);
   }

 public void enhancementEffect(ZaraQuinn) {
    System.out.println("Usando adrenalina...");
        goal.increaseSpeed(increaseInSpeed);
   }
  
}
