package src.main.java.Elements.Powers;

// Clase RemoteHacking que hereda de clase Powers
class RemoteHacking extends Powers { 
  
  public RemoteHacking(int range) { 
    super(range); 
  }

public void breakSystemEnemies() {
    System.out.println("Hackeo remoto desactivando sistemas enemigos a " + range + " metros.");
}

}

