package src.main.java.Elements.Weapons;

// Clase Flamethrower
class Flamethrower extends Weapons { 
  public Flamethrower(int range) { 
    super(range); 
  }

public void FireTorrent() {
    System.out.println("Lanzallamas emitiendo torrente de fuego a " + range + " metros.");
}

}
